# catalog

./: .gitignore  pyproject.toml
data-catalog/: main.py  pyproject.toml
data-catalog/data_catalog.egg-info/: PKG-INFO  SOURCES.txt
data_catalog/datasets/disease_list/v0.2.0/: dataset.yaml
