[project]
name = "data-catalog"
version = "0.1.1"
description = "Data catalog package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["data_catalog*"]

[tool.setuptools.package-data]
data_catalog = ["datasets/**/*.yaml"]