[project]
name = "data-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["data_catalog*"]

[tool.setuptools.package-data]
data_catalog = ["datasets/**/*.yaml"]